--- a/index.html
+++ b/index.html
@@ -147,6 +147,6 @@
     </section>
     <!-- <section class="setValues"></section> -->
   </main>
-  <script src="./src/js/main.js"></script>
+  <script type="module" src="./src/js/main.js"></script>
 </body>
 </html>
