--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
       </br>
         <p class="rowTitle">Оплатити до:</p><input class="billText" type="date">
       </br>
-<p class="item">і/н: <span class="itemInvNum"></span>, с/н: <span class="itemSerialNum"></span>, <span class="itemName"></span>, Ціна без ПДВ: <span class="itemPrice"></span> грн, Всього із ПДВ: <span class="itemLastPrice"></span> грн.</p>
+<p class="item">і/н: <span class="itemInvNum"></span>, с/н: <span class="itemSerialNum"></span>, <span class="itemName"></span>, Ціна без ПДВ: <span class="itemPrice"></span> грн</p>
+<p style="font-size: 14px;" class="right">Всього із ПДВ: <span class="itemLastPrice"></span> грн.</p>
 <span class="rowTitle">Сума прописом:</span><span id="numToText"></span>
 <span class="dividerBill"></span>
 <form class="right">
